# negotiator-lib

./: CMakeLists.txt  README.md  negotiator.cpp  negotiator.hpp
src/: negotiator.cpp  negotiator.hpp
